# midibox

./: .gitignore  .gitmodules  README.md  midibox.ino  pyproject.toml
hw-common/: api.h  midi.cpp  midi.h
hw-rp2040-picow-sdk/: CMakeLists.txt  api.h  io.cpp  io.h  main.cpp  midi.h  midibox-compat.h  tusb_config.h
hw-xiao-nrf52840/: hw-xiao-nrf52840.ino  midibox-compat.h
hw-xiao-nrf52840-bridge/: compat.h  hw-xiao-nrf52840-bridge.ino  midi.cpp  midi.h  sketch.yaml
hw-xiao-nrf52840-bridge/simulator/: CMakeLists.txt  main.cpp  midibox-compat.h
hw-xiao-nrf52840-bridge/simulator/misc/: itoa.cpp
hw-xiao-nrf52840/simulator/: CMakeLists.txt  main.cpp  midibox-compat.h
hw-xiao-samd21/: compat.h  hw-xiao-samd21.ino  midi.cpp  midibox-compat.h  sketch.yaml
hw-xiao-samd21/simulator/: CMakeLists.txt  main.cpp  midibox-compat.h
libs-modified/: RP2040_SD.h  RTCDS1307.cpp  Sd2Card.cpp  lv_conf.h
midibox/: Layers.qml  MainPanel.qml  MidiStats.qml  MidiboxContent.qml  StandaloneWidget.qml  __init__.py  __main__.py  backends.py  config-example.yaml  config.py  gui.cpp  gui.h  gui.py  gui_compositions.cpp  gui_config.cpp  gui_info.cpp  gui_layers.cpp  io.cpp  midi.cpp  midi.h  midi_def.h  midi_program.cpp  midi_secondary.cpp  midibox.h  midibox.ino  midibox.qml  midiplayer.py  osc.py  playlist.py  sketch.json  songlist.yaml  widget.py
midibox-xiao-nrf52840/: api.h  midi.cpp  midi.h  midibox-compat.h  midibox-xiao-nrf52840.ino
midibox/beater/: __init__.py  oschandler.py  predictor.py  test.py  visualiser.py
midibox/controller/: __init__.py  base.py  midibox.py
midibox/dummydata/: DummyLayer.qml  midibox.qml  programPresetsModel.qml
midibox/midiplayer/: __init__.py  midiplayer.py  osc_client_handler.py
midibox/mido/: __init__.py  mbbackend.py
midibox/osc/: client.py  client_handler.py  osc.py  server.py
midibox/recorder/: __init__.py  recorder.py
midibox/widget/: Layers.qml  MainPanel.qml  MidiboxContent.qml  Playlist.qml  __init__.py  gui.py  widget.py
midibox/widget/dummydata/: midibox.qml
simulator/: CMakeLists.txt  io.cpp  io.h  main.cpp  midibox-compat.h  qjackctl_patchbay_simulator.xml  qjackctl_patchbay_simulator_with_bridge.xml
simulator/src/: io.cpp  io.h  simulator.cmake
