[project]
name = "midibox"
version = "1.0.0"
dependencies = [
	"mido",
	"netifaces",
	"python-dispatch",
	"python-osc",
	"python-rtmidi",
]

[project.optional-dependencies]
gui = [
	"PyQt5",
	"qasync",
]

[project.scripts]
midibox = "midibox.__main__:main"

[tool.setuptools]
packages = ["midibox"]

[[tool.mypy.overrides]]
module = "pydispatch,mido,schema,qasync,schema,netifaces,PyQt5.QtWebEngine,sip"
ignore_missing_imports = true
