[project]
name = "midibox"
version = "1.0.0"
dependencies = [
	"mido",
	"netifaces",
	"python-dispatch",
	"python-osc",
	"python-rtmidi",
	"pyyaml",
	"zeroconf",
	"numpy",
]

[project.optional-dependencies]
gui = [
	"PyQt5",
	"PyQtChart",
	"PyQtWebengine",
	"qasync",
]

beater = [
	"matplotlib",
]

types = [
	"types-pyyaml",
	"PyQt5-stubs",
]

[project.scripts]
midibox = "midibox.__main__:main"

[tool.setuptools]
packages = ["midibox"]

[[tool.mypy.overrides]]
module = "pydispatch,mido,schema,qasync,schema,netifaces,PyQt5.QtWebEngine,sip"
ignore_missing_imports = true
